FIXED WHITE SPACE
Fixed white space by adding #copyright_text

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -526,10 +526,21 @@ header h2{
 }
 
 
-/* FOOTER FIX MAYBE */
+/* FOOTER FIX */
+
+#copyright_text{
+    width:200px;
+}
+
 
 @media (max-width: 600px) {
     #copyright_text {
       width: 130px;
+    }
+}
+
+@media (max-width: 400px) {
+    #copyright_text {
+      width: 50px;
     }
 }
